--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -44,7 +44,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Noir"
+CONFIG_LOCALVERSION="-sandstormKernel-v1.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -212,7 +212,7 @@ CONFIG_SLUB_CPU_PARTIAL=y
 # CONFIG_SYSTEM_TRUSTED_KEYRING is not set
 CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
-# CONFIG_JUMP_LABEL is not set
+CONFIG_JUMP_LABEL=y
 # CONFIG_UPROBES is not set
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
@@ -311,8 +311,8 @@ CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_BFQ=y
+# CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="bfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -451,8 +451,8 @@ CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 CONFIG_PROCESS_RECLAIM=y
 # CONFIG_FORCE_RECLAIM is not set
-CONFIG_DEFAULT_SWAPPINESS=100
-CONFIG_VM_MAX_READAHEAD=2048
+CONFIG_DEFAULT_SWAPPINESS=60
+CONFIG_VM_MAX_READAHEAD=128
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
@@ -4559,7 +4559,7 @@ CONFIG_QUOTACTL=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
 # CONFIG_CUSE is not set
-# CONFIG_OVERLAY_FS is not set
+CONFIG_OVERLAY_FS=y
 
 #
 # Caches
