--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -4528,7 +4528,8 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT23=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 CONFIG_EXT4_FS_SECURITY=y
-# CONFIG_EXT4_ENCRYPTION is not set
+CONFIG_EXT4_ENCRYPTION=y
+CONFIG_EXT4_FS_ENCRYPTION=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
@@ -4642,7 +4643,7 @@ CONFIG_F2FS_FS_XATTR=y
 CONFIG_F2FS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS_SECURITY=y
 # CONFIG_F2FS_CHECK_FS is not set
-# CONFIG_F2FS_FS_ENCRYPTION is not set
+CONFIG_F2FS_FS_ENCRYPTION=y
 # CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_EFIVAR_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
@@ -4890,7 +4891,7 @@ CONFIG_EARLY_PRINTK=y
 CONFIG_KEYS=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
-# CONFIG_ENCRYPTED_KEYS is not set
+CONFIG_ENCRYPTED_KEYS=y
 # CONFIG_KEYS_DEBUG_PROC_KEYS is not set
 
 #
@@ -4969,7 +4970,7 @@ CONFIG_CRYPTO_SEQIV=y
 #
 CONFIG_CRYPTO_CBC=y
 CONFIG_CRYPTO_CTR=y
-# CONFIG_CRYPTO_CTS is not set
+CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_ECB=y
 # CONFIG_CRYPTO_LRW is not set
 # CONFIG_CRYPTO_PCBC is not set
