defconfig: sanders: set default readahead to 2048KB
Android has been benefiting quicker boot from bigger readahead during
boottime than runtime. However, the boottime readahead setting is set
when init is established after treble early mount. This patch will make
readahead bigger by default so early boot can benefit from it. Readahead
will be reset by init on boot_complete.

Bug: 62413151
Test: boot walleye 100ms faster
Change-Id: Ic9dad5666ce3d4836d73afbcee04cfb875f64f5d
Signed-off-by: Wei Wang <wvw@google.com>

--- a/arch/arm64/configs/sanders_defconfig
+++ b/arch/arm64/configs/sanders_defconfig
@@ -816,6 +816,7 @@ CONFIG_SENSORS=y
 # CONFIG_USB_DWC3_CHG_DET_WA is not set
 # CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE is not set
 CONFIG_DTV_FC8300=y
+CONFIG_VM_MAX_READAHEAD=2048
 
 # For our fingerprint gestures
 CONFIG_HOMEBUTTON=y
